User id changed (Long -> String)